<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegistrationActivity"
    android:background="@drawable/signup">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/et_passwordCon"
            android:layout_width="300dp"
            android:layout_height="55dp"
            android:background="@drawable/tv_rcorner"
            android:ems="10"
            android:hint="@string/password_comfirm"
            android:inputType="textPassword"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="300dp"
            android:layout_height="55dp"
            android:layout_marginTop="136dp"
            android:background="@drawable/tv_rcorner"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/et_passwordCon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="300dp"
            android:layout_height="55dp"
            android:background="@drawable/tv_rcorner"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/et_passwordCon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_email"
            app:layout_constraintVertical_bias="0.466" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="248dp"
            android:layout_height="39dp"
            android:fontFamily="@font/montserrat"
            android:gravity="center"
            android:text="@string/signup"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@+id/et_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.917" />

        <Button
            android:id="@+id/bt_signUp"
            android:layout_width="137dp"
            android:layout_height="48dp"
            android:backgroundTint="@color/k_blackish"
            android:text="@string/signup"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_passwordCon"
            app:layout_constraintVertical_bias="0.05" />


        <Button
            android:id="@+id/bt_Login"
            android:layout_width="103dp"
            android:layout_height="48dp"
            android:layout_marginTop="28dp"
            android:background="@android:color/transparent"
            android:gravity="right"
            android:text="@string/login"
            android:textColor="@color/k_blackish"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.948"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>