<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    android:background="@drawable/rightb">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.cardview.widget.CardView
            android:id="@+id/cv_schedule"
            android:layout_width="320dp"
            android:layout_height="140dp"
            app:layout_constraintBottom_toTopOf="@+id/cv_updateGrade"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.869"
            app:cardCornerRadius="18dp"
            app:cardElevation="6dp"
            app:cardBackgroundColor="@color/k_offwhite">

            <LinearLayout
                android:layout_width="301dp"
                android:layout_height="98dp"
                android:orientation="horizontal"
                android:layout_gravity="center">

                <ImageView
                    android:id="@+id/iv_image1"
                    android:layout_width="105dp"
                    android:layout_height="match_parent"
                    android:contentDescription="Schedule icon"
                    app:srcCompat="@drawable/mysched" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <LinearLayout
                            android:layout_width="185dp"
                            android:layout_height="43dp"
                            android:orientation="vertical"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent">

                            <TextView
                                android:id="@+id/tv_myschedule"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:text="@string/Schedule"
                                android:textSize="25sp" />
                        </LinearLayout>
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_updateGrade"
            android:layout_width="320dp"
            android:layout_height="140dp"
            app:cardBackgroundColor="@color/k_offwhite"
            app:cardCornerRadius="18dp"
            app:cardElevation="6dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.564">

            <LinearLayout
                android:layout_width="301dp"
                android:layout_height="98dp"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_image2"
                    android:layout_width="103dp"
                    android:layout_height="95dp"
                    android:layout_gravity="center"
                    android:contentDescription="UpdateGrades icon"
                    app:srcCompat="@drawable/upgrades" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <LinearLayout
                            android:layout_width="185dp"
                            android:layout_height="43dp"
                            android:orientation="vertical"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent">

                            <TextView
                                android:id="@+id/tv_updateGrade"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:text="@string/UpdateSchedule"
                                android:textSize="25sp" />
                        </LinearLayout>
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_progress"
            android:layout_width="320dp"
            android:layout_height="140dp"
            app:cardBackgroundColor="@color/k_offwhite"
            app:cardCornerRadius="18dp"
            app:cardElevation="6dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cv_updateGrade"
            app:layout_constraintVertical_bias="0.179">

            <LinearLayout
                android:layout_width="301dp"
                android:layout_height="98dp"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_image3"
                    android:layout_width="105dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:contentDescription="progress icon"
                    app:srcCompat="@drawable/progrss" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <LinearLayout
                            android:layout_width="185dp"
                            android:layout_height="43dp"
                            android:orientation="vertical"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent">

                            <TextView
                                android:id="@+id/tv_myProgress"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:text="@string/Progress"
                                android:textSize="25sp" />
                        </LinearLayout>
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textView"
            android:layout_width="239dp"
            android:layout_height="63dp"
            android:text="Time to Plan"
            android:textColor="@color/k_offwhite"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.261"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.172" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>